PM20-628: Transfer status feature.
